[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inflow-shield-lib"
version = "1.0.0"
description = "Lightweight AI guardrails library — PromptInjection, Toxicity, Secrets, Vault"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Jonathan", email = "jonathanv@inextlabs.com" }
]

dependencies = [
    "transformers>=4.38.0",
    "torch>=2.2.0",
    "huggingface-hub==0.31.0",
    "tokenizers>=0.15.0",
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
    "spacy>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["inflow_shield_lib*"]